[project]
name = "gc-scraper"
version = "1.0.1"
description = "Pull processing time for various steps in US Green Card process"
authors = [
    {name = "Michael Hu", email = "pxmyhdev@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "requests>=2.26.0",
    "beautifulsoup4>=4.10.0",
    "bs4>=0.0.1",
    "matplotlib>=3.8.0",
]

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
